--- a/src/components/content/searchContent/index.scss
+++ b/src/components/content/searchContent/index.scss
@@ -21,30 +21,33 @@
             align-items: center;
             width: 1000px;
             cursor: pointer;
-            background: green;
-            border-radius: 40px 40px 0 0 ;
+            border-radius: 40px 40px 0 0;
+
 
             .SearchContent-container__menu-Item__one {
                 background: rgb(255, 204, 0);
                 width: 250px;
-                border-radius: 40px 0 0 0 ;
-                
+                border-radius: 40px 0 0 0;
+                opacity: 0.6;
             }
 
             .SearchContent-container__menu-Item__two {
                 background: rgb(255, 204, 0);
                 width: 250px;
+                opacity: 0.6;
             }
 
             .SearchContent-container__menu-Item__three {
                 background: rgb(255, 204, 0);
                 width: 250px;
+                opacity: 0.6;
             }
 
             .SearchContent-container__menu-Item__four {
                 background: rgb(255, 204, 0);
                 width: 250px;
-                border-radius: 0 40px 0 0 ;
+                border-radius: 0 40px 0 0;
+                opacity: 0.6;
             }
         }
 
@@ -54,4 +57,8 @@
 
 
     }
+}
+.SearchContent-container-item__active {
+    background-color: red;
+    opacity: 1 !important;
 }
