--- a/src/components/content/searchContent/index.scss
+++ b/src/components/content/searchContent/index.scss
@@ -24,23 +24,34 @@
             border-radius: 40px 40px 0 0;
 
 
+
             .SearchContent-container__menu-Item__one {
                 background: rgb(255, 204, 0);
                 width: 250px;
                 border-radius: 40px 0 0 0;
                 opacity: 0.6;
+
+                &:hover {
+                    background: rgb(255, 179, 0);
+                }
             }
 
             .SearchContent-container__menu-Item__two {
                 background: rgb(255, 204, 0);
                 width: 250px;
                 opacity: 0.6;
+                &:hover {
+                    background: rgb(255, 179, 0);
+                }
             }
 
             .SearchContent-container__menu-Item__three {
                 background: rgb(255, 204, 0);
                 width: 250px;
                 opacity: 0.6;
+                &:hover {
+                    background: rgb(255, 179, 0);
+                }
             }
 
             .SearchContent-container__menu-Item__four {
@@ -48,6 +59,9 @@
                 width: 250px;
                 border-radius: 0 40px 0 0;
                 opacity: 0.6;
+                &:hover {
+                    background: rgb(255, 179, 0);
+                }
             }
         }
 
@@ -58,6 +72,7 @@
 
     }
 }
+
 .SearchContent-container-item__active {
     background-color: red;
     opacity: 1 !important;
