--- a/src/components/content/login/index.scss
+++ b/src/components/content/login/index.scss
@@ -1,49 +1,35 @@
-
-.login__container-active{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    color:black !important;
-    
-    .login-button{
-        background-color: #2a52f0 !important;
-        box-shadow: 0px 0px 4px 3px #2a52f0 !important;
-        color: #dfe2e7 !important; 
+.login__container-navbar {
+    nav {
+        display: flex;
         width: 100%;
-        height: 40px;
-        border-style: none;
-        border-radius: 20px;
-        font-size: 1.2rem;
-        transition: 0.3s;
-    }
+        background: rgb(74, 204, 255);
 
-    .login-button:hover{
-        opacity: 0.9;
+        img {
+            width: 300px;
+            height: 100px;
+            cursor: pointer;
+        }
     }
 }
 
-.login__container{
+.login__container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: rgb(59, 181, 229);
     height: 100vh;
-    color: white;
 
-    .login-button{
-        cursor: pointer;
-        width: 100%;
-        height: 40px;
-        border-style: none;
-        border-radius: 20px;
-        background: rgb(10, 10, 98);
-        box-shadow: 0px 0px 4px 3px #0411c4;
-        font-size: 1.2rem;
-        transition: 0.3s;
-        color: white;
+    .login__container-form {
+        width: 400px;
     }
 
-    .login-button:hover{
-        opacity: 0.9;
+    .signup-button {
+        cursor: pointer;
+        color: rgb(165, 236, 255);
+
+        &:hover {
+            color: rgb(36, 174, 213);
+        }
     }
 }
