--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -25,6 +25,9 @@
             margin-left: 20px;
             color: rgb(34, 91, 224);
         }
+        .header-top-navbar-close{
+            cursor: pointer;
+        }
     }
 }
 
