--- a/src/components/content/searchContent/searchItem1/index.scss
+++ b/src/components/content/searchContent/searchItem1/index.scss
@@ -4,10 +4,14 @@
     .switch {
         position: relative;
         display: inline-block;
-        width: 60px;
+        width: 200px;
         height: 34px;
         background-color: #ccc;
         overflow: hidden;
+
+        p {
+            background: blue;
+        }
     }
 
     .switch input[type='checkbox'] {
@@ -32,7 +36,7 @@
         position: absolute;
         content: '';
         height: 26px;
-        width: 26px;
+        width: 100px;
         left: 4px;
         bottom: 4px;
         background-color: #ccc;
@@ -42,9 +46,9 @@
     }
 
     .switch input:checked+.switch-slider:before {
-        -webkit-transform: translateX(26px);
-        -ms-transform: translateX(26px);
-        transform: translateX(26px);
+        -webkit-transform: translateX(90px);
+        -ms-transform: translateX(90px);
+        transform: translateX(90px);
         background-color: #66bb6a;
     }
 
@@ -56,7 +60,7 @@
         p {
             cursor: pointer;
         }
-       
+
     }
 
 
