--- a/src/components/content/searchContent/searchItem1/index.scss
+++ b/src/components/content/searchContent/searchItem1/index.scss
@@ -110,7 +110,6 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-around;
-                flex-direction: column;
                 width: 150px;
             }
         }
@@ -125,6 +124,55 @@
             background: red;
             width: 300px;
             color: white;
+
+            .searchItem-one__container-place__ports-one {
+                display: flex;
+                flex-direction: column;
+                cursor: pointer;
+
+            }
+
+            .searchItem-one__container-place__ports-one hr {
+                height: 5px;
+                opacity: 999;
+                width: 100px;
+                border: none;
+                background-color: rgb(255, 255, 255);
+            }
         }
+    }
+}
+
+.searchItem-one__container-place__ports {
+
+    display: flex;
+    position: relative;
+    flex-direction: column !important;
+    overflow: auto;
+    height: 250px;
+    width: 200px;
+    opacity: 2;
+    background: red;
+
+    p {
+        background: rgb(38, 255, 0);
+        cursor: pointer;
+    }
+}
+
+.searchItem-one__container-place__ports-right {
+    display: flex;
+    position: relative;
+    left: 200px;
+    flex-direction: column !important;
+    overflow: auto;
+    height: 250px;
+    width: 200px;
+    opacity: 2;
+    background: red;
+
+    p {
+        background: rgb(38, 255, 0);
+        cursor: pointer;
     }
 }
