--- a/src/components/content/searchContent/searchItem1/index.scss
+++ b/src/components/content/searchContent/searchItem1/index.scss
@@ -155,9 +155,10 @@
 
     display: flex;
     position: relative;
+    align-items: center;
     flex-direction: column !important;
     overflow: auto;
-    height: 250px;
+    height: auto;
     width: 200px;
     opacity: 2;
     background: red;
@@ -165,23 +166,26 @@
 
     p {
         background: rgb(38, 255, 0);
+        width: 100vh;
         cursor: pointer;
     }
 }
 
 .searchItem-one__container-place__ports-right {
     display: flex;
+    align-items: center;
     position: relative;
     left: 200px;
     flex-direction: column !important;
     overflow: auto;
-    height: 250px;
+    height: auto;
     width: 200px;
     opacity: 2;
     background: red;
 
     p {
         background: rgb(38, 255, 0);
+        width: 100vh;
         cursor: pointer;
     }
 }
