--- a/src/components/content/searchContent/searchItem1/index.scss
+++ b/src/components/content/searchContent/searchItem1/index.scss
@@ -158,7 +158,7 @@
     align-items: center;
     flex-direction: column !important;
     overflow: auto;
-    height: auto;
+    height: 200px;
     width: 200px;
     opacity: 2;
     background: red;
@@ -178,7 +178,7 @@
     left: 200px;
     flex-direction: column !important;
     overflow: auto;
-    height: auto;
+    height: 200px;
     width: 200px;
     opacity: 2;
     background: red;
