--- a/src/components/componies/index.scss
+++ b/src/components/componies/index.scss
@@ -1,6 +1,6 @@
 .flyCompanies-container {
     display: flex;
-    background: red;
+    background: rgb(228, 228, 228);
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -13,28 +13,38 @@
         background: white;
         margin-top: 30px;
         height: 150px !important;
-        width: 1040px;
+        width: 1500px;
         padding: 30px;
         margin-bottom: 10px;
+        border-radius: 20px;
+        box-shadow: 0px 3px 10px #d4d4d4;
 
         .flyCompanies-container__box-info-top {
             display: flex;
             flex-direction: column;
             gap: 20px;
+            
+            
 
             .flyCompanies-container__box-info-top-p {
                 cursor: pointer;
                 color: white;
-                background: red;
+                width: 160px;
+                border-radius: 10px;
+                background: rgb(103, 115, 141);
+                padding: 3px;
+                margin-top: 20px;
 
                 &:hover {
-                    background: rgb(129, 32, 32);
+                    background: rgb(44, 56, 85);
                 }
             }
 
             .flyCompanies-container__box-info-city {
                 display: flex;
                 gap: 20px;
+                margin: -10px;
+                margin-left: 1px;
             }
 
 
@@ -42,13 +52,15 @@
                 display: flex;
                 height: 20px;
                 opacity: 2;
-                gap: 30px;
+                gap: 60px;
+                margin-bottom: 20px;
             }
         }
 
         .flyCompanies-container__box-info-bottom {
 
             display: flex;
+            margin-top: 30px;
         }
     }
 
@@ -56,10 +68,10 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        background: green;
+        background: rgb(228, 228, 228);
         padding: 20px;
         overflow: auto;
-        height: 500px;
+        height: 700px;
 
         .flyCompanies-container-content-container {
 
@@ -70,9 +82,11 @@
                 cursor: pointer;
                 background: white;
                 margin-top: 30px;
-                height: 100px !important;
-                width: 1000px;
+                height: 150px !important;
+                width: 1500px;
                 gap: 20px;
+                border-radius: 10px;
+                box-shadow: 0px 3px 10px #d4d4d4;
             }
 
         }
