--- a/src/components/content/loginPopup/index.scss
+++ b/src/components/content/loginPopup/index.scss
@@ -1,52 +1,27 @@
-.signup__container-navbar {
-    nav {
-        display: flex;
-        width: 100%;
-        background: rgb(74, 204, 255);
 
-        img {
-            width: 300px;
-            height: 100px;
-            cursor: pointer;
-        }
-    }
-}
 
-.login__container-active {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 600px;
-    color: black !important;
-
-    .login-button {
-        background-color: #2a52f0 !important;
-        box-shadow: 0px 0px 4px 3px #2a52f0 !important;
-        color: #dfe2e7 !important;
-        width: 100%;
-        height: 40px;
-        border-style: none;
-        border-radius: 20px;
-        font-size: 1.2rem;
-        transition: 0.3s;
-    }
-
-    .login-button:hover {
-        opacity: 0.9;
-    }
-}
 
 .login__container-popup {
     position: fixed;
+    margin-top: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 600px;
+    height: 400px;
     width: 400px;
     z-index: 2;
     right: 0;
-    background: rgb(0, 81, 255);
-    color: white;
+    background: white;
+    color: black;
+    border-radius: 10px;
+
+    input{
+        background-color: transparent;
+        border: none;
+        border-bottom: 1px solid black;
+        border-radius: 0;
+        margin-bottom: 30px;
+    }
 
     .login-button {
         cursor: pointer;
@@ -54,11 +29,11 @@
         height: 40px;
         border-style: none;
         border-radius: 20px;
-        background: rgb(10, 10, 98);
-        box-shadow: 0px 0px 4px 3px #0411c4;
+        background: #2c3855;
         font-size: 1.2rem;
         transition: 0.3s;
         color: white;
+        padding-top: 5px;
     }
 
     .login-button:hover {
@@ -67,10 +42,10 @@
 
     .signup-button {
         cursor: pointer;
-        color: rgb(165, 236, 255);
+        color: rgb(0, 121, 154);
 
         &:hover {
-            color: rgb(36, 174, 213);
+            color: rgb(0, 162, 207);
         }
     }
 }
