--- a/src/components/content/register/index.scss
+++ b/src/components/content/register/index.scss
@@ -1,52 +1,118 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
+
+
 .signup-container {
     max-width: 400px;
-    margin: 0 auto;
+    margin: 40px auto;
     padding: 20px;
-    background-color: #f2f2f2;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    background-color: rgb(219, 219, 219);
+    border-radius: 12px;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.1);
+    font-family: "Poppins", sans-serif;
 
     h2 {
         margin-top: 0;
+        margin-bottom: 40px;
+        color: #2c3855;
     }
 
     form {
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: 25px;
 
             label {
                 display: block;
                 font-weight: bold;
-                margin-bottom: 5px;
+                margin-bottom: 0;
+                margin-left: 75px;
             }
 
             input {
                 width: 100%;
                 padding: 8px;
                 font-size: 16px;
-                border-radius: 4px;
-                border: 1px solid #ccc;
+                margin-left: 80px;
+                border: none;
+                background-color: transparent;
+                border-bottom: 1px solid black;
+                border-radius: 0;
             }
         }
 
         button[type='submit'] {
             padding: 10px 20px;
             font-size: 16px;
-            background-color: #4caf50;
             color: #fff;
             border: none;
             border-radius: 4px;
             cursor: pointer;
+         
         }
     }
 
     .signup-container__login {
-        padding: 10px 20px;
+        padding-left: 10px;
         font-size: 16px;
-        background-color: #4c78af;
-        color: #fff;
+        color: rgb(0, 121, 154);
         border: none;
         border-radius: 4px;
         cursor: pointer;
+
+        &:hover {
+            color: rgb(0, 162, 207);
+        }
+    }
+
+    p{
+        margin-bottom: 5px;
+        margin-top: 15px;
+        font-size: 15px;
     }
 }
+
+.header-navbar {
+    height: 100px;
+    background-color: #2c3855;
+    margin: auto;
+    padding: 2rem 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.4);
+    font-family: "Poppins", sans-serif;
+
+
+    .nav_logo {
+        padding-left: 9%;
+        font-size: 1.5rem;
+        font-weight: 600;
+        color: #f3f4f6;
+      }
+      
+      .nav_links {
+        padding-right: 9%;
+        list-style: none;
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+        padding-top: 20px;
+        color: white;
+
+
+          .link a {
+            font-weight: 500;
+            color: #f3f4f6;
+            transition: 0.3s;
+          }
+          
+          .link a:hover {
+            color: #8a8a8a;
+          }
+
+      }
+      
+      
+
+  }
