--- a/src/components/content/searchContent/searchItem1/popup/index.scss
+++ b/src/components/content/searchContent/searchItem1/popup/index.scss
@@ -5,14 +5,18 @@
     align-items: center;
     left: 630px;
     width: 320px;
-    background: red;
+    background: white;
+    border-radius: 10px;
+    padding: 15px;
 
     button{
+        margin-top: 20px;
         width: 100px;
         border-style: none;
     }
 
     .passengerpopup-container-p{
+        padding-top: 18px;
         width: 200px;
         font-weight: 600;
     }
@@ -55,5 +59,10 @@
             height: 40px;
             outline: none;
         }
+    }
+    .passengerpopup-container__button{
+        border-radius: 5px;
+        background-color: rgb(65, 65, 132);
+        color: white;
     }
 }
