--- a/src/components/content/searchContent/searchItem2/index.scss
+++ b/src/components/content/searchContent/searchItem2/index.scss
@@ -2,7 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 260px;
+    height: 150px;
+
+
+
 
     .searchItem-two__container-form {
         display: flex;
@@ -10,12 +13,36 @@
         justify-content: space-evenly;
         width: 60%;
 
+       
+
         .searchItem-two__container-inputBox {
             input {
                 border-style: none;
                 outline: none;
                 margin-left: 10px;
-                border-radius: 20px;
+                margin-top: 25px;
+                background-color: transparent;
+                border-bottom: 1px solid black;
+                border-radius: 0;
+                width: 300px;
+                
+
+                &::placeholder{
+                    color: rgba(36, 36, 36, 0.7);
+                }
+            }
+        }
+
+
+        .searchItem-two__container-button{
+            margin-right: 60px;
+            margin-top: 40px;
+            background-color: #2c3855;
+            height: 50px;
+            width: 180px;
+            border-radius: 30px;
+            &:hover{
+                background-color: #536aa0;
             }
         }
 
