Online Check-In page edited & bugs are fixed

--- a/src/components/content/searchContent/searchItem1/index.scss
+++ b/src/components/content/searchContent/searchItem1/index.scss
@@ -163,6 +163,10 @@
                 font-weight: bold;
             }
 
+            .exchangeIcon {
+                cursor: pointer;
+            }
+
             .searchItem-one__container-place__ports-one {
                 display: flex;
                 flex-direction: column;
