--- a/src/components/payScreen/index.scss
+++ b/src/components/payScreen/index.scss
@@ -1,10 +1,14 @@
 .payScreen__container-navbar {
     nav {
         display: flex;
+        align-items: center;
         width: 100%;
-        background: rgb(74, 204, 255);
+        height: 120px;
+        background-color: #1a3a84;
 
         img {
+            margin-left: 50px;
+            background: white;
             width: 300px;
             height: 100px;
             cursor: pointer;
@@ -28,7 +32,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: red;
     height: 100vh;
 
     .payScreen-container__paySide {
@@ -40,7 +43,15 @@
 
         .payScreen-container-h3 {
             font-size: 20px;
-            background: red;
+        }
+
+        .approvalButton {
+            background-color: #0f2351;
+
+            &:hover {
+                transition: 0.8s;
+                background-color: #2c57bc;
+            }
         }
 
     }
@@ -53,20 +64,43 @@
         width: 650px;
         margin-top: 160px;
         padding: 20px;
-        background: white;
+        color: white;
+        border-radius: 40px;
+        background-color: #1a3a84;
 
         .payScreen-container-cardForm-frontContent {
             display: flex;
+            align-items: center;
+            justify-content: space-between;
             gap: 20px;
             position: relative;
+            width: 100%;
             bottom: 100px;
+
+            input {
+                border-radius: 20px;
+                border-style: none;
+                outline: none;
+            }
+
+            .payScreen-container-cardForm-frontContent-mounth {
+                display: flex;
+                gap: 40px;
+
+                option {
+                    border-radius: 30px;
+                    border-style: none;
+                }
+            }
         }
 
         .payScreen-container-box__installment {
             display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
             position: relative;
             flex-direction: column;
-            right: 140px;
+            width: 100%;
             bottom: 80px;
 
             .payScreen-container-box__installment-inputGroup {
@@ -78,8 +112,20 @@
         .payScreen-container-cardForm-check {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
+            width: 100%;
             height: 40px;
+            gap: 30px;
+
+            .payScreen-container-cardForm-checkBox {
+                position: relative;
+                bottom: 8px;
+            }
+
+            p {
+                position: relative;
+                right: 20px;
+            }
         }
     }
 
@@ -99,19 +145,36 @@
         color: white;
         backface-visibility: hidden;
         transition: transform 0.8s;
+
+        .payScreen-card__front-top {
+            display: flex;
+            width: 100%;
+            align-items: flex-start;
+
+            .payScreen-card__front-top__number {
+                width: 100%;
+            }
+        }
+
+        .payScreen-card__front-bottom {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            width: 100%;
+        }
     }
 
     .payScreen-card__front {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
         background: rgb(13, 7, 85);
         border-radius: 20px;
         padding: 20px;
 
         .payScreen-card__front-number {
-            font-size: 20px;
+            font-size: 22px;
         }
     }
 
@@ -136,6 +199,12 @@
 
         .payScreen-card__back-input {
             width: 400px;
+
+            ::placeholder {
+                display: flex;
+                width: 100%;
+                justify-content: flex-end;
+            }
         }
     }
 
@@ -158,10 +227,14 @@
         margin-bottom: 10px;
     }
 
-    .payScreen-card input {
-        width: 100%;
-        padding: 5px;
-        margin-bottom: 10px;
+    .payScreen-card {
+        input {
+            width: 100%;
+            padding: 5px;
+            border-style: none;
+            margin-bottom: 10px;
+            outline: none;
+        }
     }
 
     .payScreen-card button {
@@ -181,18 +254,78 @@
         display: flex;
         position: relative;
         bottom: 120px;
+
+        input {
+            width: 100%;
+            padding: 5px;
+            border-style: none;
+            outline: none;
+        }
     }
 
 }
 
 .toast-container {
     display: flex;
+    align-items: center;
+    justify-content: center;
     position: fixed;
-    top: 50%;
-    left: 40%;
-    background: red;
+    top: 40%;
+    left: 35%;
+    height: 300px;
+    width: 500px !important;
+    opacity: 2;
+    border-radius: 40px;
+    background: rgb(0, 123, 255);
 
     .popup-content {
-        background: red;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        height: 200px;
+        border-radius: 10px;
+
+        .popup-content__box-pnr {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .popup-content-button {
+            display: flex;
+            gap: 30px;
+            width: 100%;
+
+            button {
+                border-style: none;
+                color: white;
+                height: 40px;
+                font-size: 10px;
+            }
+
+            .popup-content-button__main {
+                color: white;
+                background: rgb(0, 123, 255);
+
+                &:hover {
+                    background: rgb(36, 141, 252);
+                }
+            }
+
+            .popup-content-button__summary {
+
+                color: white;
+                background: rgb(0, 123, 255);
+
+                &:hover {
+                    background: rgb(36, 141, 252);
+                }
+
+            }
+        }
     }
+}
+
+.footer-opacity {
+    opacity: 0.2;
 }
