--- a/src/components/content/login/index.scss
+++ b/src/components/content/login/index.scss
@@ -26,15 +26,12 @@
         label {
             display: block;
             font-weight: bold;
-            margin-bottom: 0;
-            margin-left: 75px;
         }
 
         input {
             width: 100%;
             padding: 8px;
             font-size: 16px;
-            margin-left: 80px;
             margin-bottom: 40px;
             border: none;
             background-color: transparent;
@@ -43,8 +40,18 @@
         }
     }
     .login-button{
+        border: none;
         border-radius: 4px;
+        padding: 10px 20px;
         margin-bottom: 20px;
+        cursor: pointer;
+        color: white;
+        background-color: #2c3855;
+        transition: 0.3s;
+
+        &:hover {
+            background-color: #536aa0;
+        }
     }
 
   
