--- a/src/components/content/register/index.scss
+++ b/src/components/content/register/index.scss
@@ -20,20 +20,19 @@
 
     form {
         .form-group {
-            margin-bottom: 25px;
+            margin-bottom: 35px;
 
             label {
                 display: block;
                 font-weight: bold;
-                margin-bottom: 0;
-                margin-left: 75px;
+ 
+
             }
 
             input {
                 width: 100%;
                 padding: 8px;
                 font-size: 16px;
-                margin-left: 80px;
                 border: none;
                 background-color: transparent;
                 border-bottom: 1px solid black;
@@ -48,6 +47,12 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            background-color: #2c3855;
+            transition: 0.3s;
+
+            &:hover {
+                background-color: #536aa0;
+            }
          
         }
     }
