--- a/src/components/content/searchContent/searchItem1/index.scss
+++ b/src/components/content/searchContent/searchItem1/index.scss
@@ -174,6 +174,7 @@
 
 
                 input {
+                    margin-top: 35px;
                     width: 120px;
                     outline: none;
                     border-style: none;
